hphp/hack/test/typecheck/shapes_remove_key.php.exp
File "shapes_remove_key.php", line 12, characters 3-39:
Invalid assignment (Typing[4110])
File "shapes_remove_key.php", line 9, characters 3-34:
Expected nothing because the field 'a' was unset here
File "shapes_remove_key.php", line 12, characters 28-28:
But got int
